# Robotics-and-its-application

./: .gitignore  Doxyfile  README.md  a.out
archive_teamBaboo/robot_planning/: CMakeLists.txt  package.xml
archive_teamBaboo/robot_planning/include/robotPlanning/: agreedy.hpp  (+6 more)
archive_teamBaboo/robot_planning/src/: AStar.cpp  CellDecompositionMapGenerator.cpp  MapGeneratorNode.cpp  TaskPlannerNode.cpp  obstacles.cpp
archive_teamBaboo/sh scripts/: kill_nodes.sh  to_run_nodes.sh
graph_for_task_planner_msg/: CMakeLists.txt  package.xml
graph_for_task_planner_msg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
graph_for_task_planner_msg/install/graph_for_task_planner_msg/include/graph_for_task_planner_msg/graph_for_task_planner_msg/msg/: edge.h  edge.hpp  graph.h  graph.hpp  point.h  point.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
graph_for_task_planner_msg/install/graph_for_task_planner_msg/include/graph_for_task_planner_msg/graph_for_task_planner_msg/msg/detail/: edge__builder.hpp  edge__functions.h  edge__rosidl_typesupport_fastrtps_c.h  edge__rosidl_typesupport_fastrtps_cpp.hpp  edge__rosidl_typesupport_introspection_c.h  edge__rosidl_typesupport_introspection_cpp.hpp  edge__struct.h  edge__struct.hpp  edge__traits.hpp  edge__type_support.c  edge__type_support.h  graph__builder.hpp  graph__functions.h  graph__rosidl_typesupport_fastrtps_c.h  graph__rosidl_typesupport_fastrtps_cpp.hpp  graph__rosidl_typesupport_introspection_c.h  graph__rosidl_typesupport_introspection_cpp.hpp  graph__struct.h  graph__struct.hpp  graph__traits.hpp  graph__type_support.h  point__builder.hpp  point__functions.c  point__functions.h  point__rosidl_typesupport_fastrtps_c.h  point__rosidl_typesupport_fastrtps_cpp.hpp  point__rosidl_typesupport_introspection_c.h  point__rosidl_typesupport_introspection_cpp.hpp  point__struct.h  point__struct.hpp  point__traits.hpp  point__type_support.h
graph_for_task_planner_msg/install/graph_for_task_planner_msg/local/lib/python3.10/dist-packages/graph_for_task_planner_msg/: __init__.py  _graph_for_task_planner_msg_s.ep.rosidl_typesupport_c.c  _graph_for_task_planner_msg_s.ep.rosidl_typesupport_fastrtps_c.c  _graph_for_task_planner_msg_s.ep.rosidl_typesupport_introspection_c.c
graph_for_task_planner_msg/install/graph_for_task_planner_msg/local/lib/python3.10/dist-packages/graph_for_task_planner_msg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
graph_for_task_planner_msg/install/graph_for_task_planner_msg/local/lib/python3.10/dist-packages/graph_for_task_planner_msg/msg/: __init__.py  _edge.py  _edge_s.c  _graph.py  _graph_s.c  _point.py  _point_s.c
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/ament_index/resource_index/package_run_dependencies/: graph_for_task_planner_msg
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/ament_index/resource_index/parent_prefix_path/: graph_for_task_planner_msg
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/ament_index/resource_index/rosidl_interfaces/: graph_for_task_planner_msg
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/graph_for_task_planner_msg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/graph_for_task_planner_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_graph_for_task_planner_msg__rosidl_generator_cppExport.cmake  graph_for_task_planner_msgConfig-version.cmake  graph_for_task_planner_msgConfig.cmake  graph_for_task_planner_msg__rosidl_typesupport_cppExport-noconfig.cmake  graph_for_task_planner_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  graph_for_task_planner_msg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/graph_for_task_planner_msg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
graph_for_task_planner_msg/install/graph_for_task_planner_msg/share/graph_for_task_planner_msg/msg/: Edge.idl  Edge.msg  Graph.idl  Graph.msg  Point.idl  Point.msg
graph_for_task_planner_msg/log/: latest_build
install/: local_setup.sh  setup.sh
log/: latest_build
motion_planner_msgs/: CMakeLists.txt
motion_planner_msgs/src/: Segment.msg
motion_planner_msgs/srv/: ValidatePath.srv
robot_planning/: CMakeLists.txt
robot_planning/include/robotPlanning/: AStar.hpp  CellDecompositionMapGenerator.hpp  IMapGenerator.hpp  IPathPlanner.hpp  MapGeneratorNode.hpp  MotionPlannerNode.hpp  SampleBasedMapGenerator.hpp  TaskPlanner.hpp  TaskPlannerNode.hpp  agreedy.hpp  graph.hpp  multiPointMarkovDubins.hpp  obstacles.hpp  point.hpp  variables.hpp  victim.hpp
robot_planning/src/: AStar.cpp  CellDecompositionMapGenerator.cpp  Documents.code-workspace  IMapGenerator.cpp  IPathPlanner.cpp  MapGenerator.cpp  MapGeneratorNode.cpp  MotionPlanner.cpp  MotionPlannerNode.cpp  SampleBasedMapGenerator.cpp  TaskPlanner.cpp  TaskPlannerN.cpp  TaskPlannerNode.cpp  a.out  agreedy.cpp  cellDecomposition.cpp  dataRetriver.cpp  followPath.cpp  graph.cpp  listenerBorders.cpp  listenerGates.cpp  listenerObstacles.cpp  multiPointMarkovDubins.cpp  obstacles.cpp  point.cpp  victim.cpp
robot_planning/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_planning/src/log/: latest_build
robot_planning/src/old_code_base/: cellDecomposition.cpp  test.cpp
sh scripts/: kill_gz.sh  kill_nodes.sh  rerun.sh  to_run_nodes.sh
(+155 files in other folders)
